--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 bin/** linguist-vendored
+BankStatementTagger_Release/BankStatementTagger.exe filter=lfs diff=lfs merge=lfs -text
+BankStatementTagger_v2.0.zip filter=lfs diff=lfs merge=lfs -text
